--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">NewsFeed</string>
     <string name="headlines">HEADLINES</string>
+
+    <string name="dummy_headline">Boeing dedicates $100 millions to victim of flood . It should also be very very huge thing so we can do something</string>
 </resources>
